# account-abstraction-builder

./: .gitmodules
app/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  temp.json
app/src/components/: AddModifierButton.tsx  CodeEditor.tsx  DeployButton.tsx  Market.tsx  MarketDialog.tsx  Plugin.tsx  PluginCard.tsx  PluginsSection.tsx  TabbedCodeEditor.tsx
app/src/components/Draggables/: DraggableItem.tsx  DropBoxArea.tsx  DropBoxCard.tsx  DropZone.tsx
app/src/components/Plugins/: Plugin.tsx  PluginCard.tsx  PluginsSection.tsx
app/src/contexts/: CodeContext.tsx
app/src/discarded/: irrelevantindex.tsx
app/src/pages/: _app.tsx  index.tsx
app/src/proto/: client.ts  service.ts
app/src/proto/service/: GetSolidityCodeRequest.ts  GetSolidityCodeResponse.ts  Plugin.ts  Service.ts
app/src/proto_client/proto/: rpc.ts  service.ts
app/src/styles/: globals.css
backend/: .gitignore  Cargo.toml  Dockerfile  UserAccount.solx  build.rs  plugins.json
backend/proto/: service.proto
backend/src/: main.rs  plugin.rs  types.rs
contracts/: remappings.txt
contracts/src/: BaawAccount.sol  BaawBaseAccount.sol  UserAccount.sol
contracts/src/plugins/: AaveLibrary.sol  PushLibrary.sol
contracts/test/: Baaw.t.sol
